# Aragon-RSPS-Launcher

./: .gitignore  .replit  BUILD.md  BUILD_INSTRUCTIONS.md  BUNDLED_JRE.md  CAPTURE_SCREENSHOTS.md  DISCORD_WEBHOOK_GUIDE.md  FIXES_SUMMARY.md  README.md  README_DISCORD_SCRIPTS.md  build-linux.sh  build-macos.sh  build-windows.bat  discord-announcement-with-images.js  discord-announcement.js  discord-launcher-showcase-urls.js  discord-launcher-showcase.js  index.html  package.json  pom.xml  replit.md  validate-project.sh  vite.config.js
attached_assets/: Pasted--PS-C-Users-mhmdk-OneDrive-Documents-GitHub-Aragon-RSPS-Launcher-npm-run-tauri-build-aragon--1760114169446_1760114169446.txt  Pasted--UI-UX-Design-System-Dragon-Theme-Color-Palette-Primary-Colors-Dragon-Crimson-c-1761130403834_1761130403835.txt  Pasted-Building-Windows-Installer-with-Windows-JRE-only-Temporarily-moving-macOS-JRE-Temporarily--1760125536874_1760125536875.txt  Pasted-PS-C-Users-mhmdk-OneDrive-Documents-GitHub-Aragon-RSPS-Launcher-npm-run-tauri-dev-aragon-laun-1760118423452_1760118423453.txt  (+1 more)
build-scripts/: build-linux.sh  build-macos.sh  build-windows.bat
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/resources/jre/linux/: release
src-tauri/resources/jre/linux/lib/security/: cacerts
src-tauri/resources/jre/windows/: release
src-tauri/resources/jre/windows/conf/security/: java.security
src-tauri/resources/jre/windows/lib/: classlist
src-tauri/resources/jre/windows/lib/security/: cacerts
src-tauri/src/: main.rs
(+13 files in other folders)
