[package]
name = "aragon-launcher"
version = "1.0.0"
description = "Aragon RSPS Launcher"
authors = ["Aragon Studios"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-start-dragging", "window-unmaximize", "window-maximize", "window-show", "window-hide", "window-unminimize", "shell-open", "window-minimize", "window-close"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
